[gd_scene load_steps=12 format=3 uid="uid://bvytv1hmbegie"]

[ext_resource type="PackedScene" path="res://src/main/editor/puzzle/PlayfieldEditor.tscn" id="1"]
[ext_resource type="Script" path="res://src/main/editor/puzzle/editor-json.gd" id="2"]
[ext_resource type="Script" path="res://src/main/editor/puzzle/properties-editor-control.gd" id="4"]
[ext_resource type="Script" path="res://src/main/editor/puzzle/level-editor.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://dw3n3uvccampk" path="res://src/main/ui/settings/SettingsMenu.tscn" id="9"]
[ext_resource type="Shortcut" path="res://src/main/ui/UiMenuShortcut.tres" id="10"]
[ext_resource type="PackedScene" uid="uid://dsog4bkmkh6g3" path="res://src/main/ui/PopupHideSignalEmitter.tscn" id="10_jc62r"]
[ext_resource type="Theme" path="res://src/main/ui/theme/h4.theme" id="11"]
[ext_resource type="PackedScene" path="res://src/main/ui/DialogBackdrop.tscn" id="15"]
[ext_resource type="Script" path="res://src/main/editor/puzzle/dialogs.gd" id="16"]
[ext_resource type="PackedScene" path="res://src/main/puzzle/Puzzle.tscn" id="17"]

[node name="LevelEditor" type="Node"]
script = ExtResource("8")
PuzzleScene = ExtResource("17")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Playfield" parent="HBoxContainer/TabContainer" instance=ExtResource("1")]
layout_mode = 2

[node name="Properties" type="Control" parent="HBoxContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4")

[node name="Pickups" type="VBoxContainer" parent="HBoxContainer/TabContainer/Properties"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 60.0

[node name="HBoxContainer1" type="HBoxContainer" parent="HBoxContainer/TabContainer/Properties/Pickups"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/TabContainer/Properties/Pickups/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("11")
text = "Pickups"
horizontal_alignment = 2

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/TabContainer/Properties/Pickups/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("11")
text = "0"

[node name="Button" type="Button" parent="HBoxContainer/TabContainer/Properties/Pickups"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("11")
text = "Calculate"

[node name="SideButtons" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="LevelId" type="LineEdit" parent="HBoxContainer/SideButtons"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme = ExtResource("11")
text = "default"
editable = false

[node name="HSeparator1" type="HSeparator" parent="HBoxContainer/SideButtons"]
layout_mode = 2

[node name="OpenFile" type="Button" parent="HBoxContainer/SideButtons"]
layout_mode = 2
theme = ExtResource("11")
shortcut_in_tooltip = false
text = "Open File"

[node name="OpenResource" type="Button" parent="HBoxContainer/SideButtons"]
layout_mode = 2
theme = ExtResource("11")
shortcut_in_tooltip = false
text = "Open Resource"

[node name="Save" type="Button" parent="HBoxContainer/SideButtons"]
layout_mode = 2
theme = ExtResource("11")
shortcut_in_tooltip = false
text = "Save"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/SideButtons"]
layout_mode = 2

[node name="Test" type="Button" parent="HBoxContainer/SideButtons"]
layout_mode = 2
theme = ExtResource("11")
shortcut_in_tooltip = false
text = "Test"

[node name="Json" type="TextEdit" parent="HBoxContainer/SideButtons"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_vertical = 3
text = "abc"
script = ExtResource("2")
playfield_editor_path = NodePath("../../TabContainer/Playfield")
properties_editor_path = NodePath("../../TabContainer/Properties")
test_button_path = NodePath("../Test")

[node name="Settings" type="Button" parent="HBoxContainer/SideButtons"]
layout_mode = 2
theme = ExtResource("11")
shortcut = ExtResource("10")
shortcut_in_tooltip = false
text = "Settings"

[node name="Quit" type="Button" parent="HBoxContainer/SideButtons"]
layout_mode = 2
theme = ExtResource("11")
shortcut_in_tooltip = false
text = "Quit"

[node name="Ui" type="CanvasLayer" parent="."]

[node name="Dialogs" type="Control" parent="Ui"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("16")
level_editor_path = NodePath("../..")

[node name="Backdrop" parent="Ui/Dialogs" instance=ExtResource("15")]
layout_mode = 0

[node name="OpenFile" type="FileDialog" parent="Ui/Dialogs"]
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="PopupHideSignalEmitter" parent="Ui/Dialogs/OpenFile" instance=ExtResource("10_jc62r")]

[node name="OpenResource" type="FileDialog" parent="Ui/Dialogs"]
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.json")

[node name="PopupHideSignalEmitter" parent="Ui/Dialogs/OpenResource" instance=ExtResource("10_jc62r")]

[node name="Save" type="FileDialog" parent="Ui/Dialogs"]
size = Vector2i(600, 400)
access = 2
filters = PackedStringArray("*.json")

[node name="PopupHideSignalEmitter" parent="Ui/Dialogs/Save" instance=ExtResource("10_jc62r")]

[node name="Error" type="AcceptDialog" parent="Ui/Dialogs"]
size = Vector2i(250, 80)
dialog_autowrap = true

[node name="PopupHideSignalEmitter" parent="Ui/Dialogs/Error" instance=ExtResource("10_jc62r")]

[node name="SettingsMenu" parent="." instance=ExtResource("9")]

[connection signal="pickups_changed" from="HBoxContainer/TabContainer/Playfield" to="HBoxContainer/SideButtons/Json" method="_on_PlayfieldEditor_pickups_changed"]
[connection signal="tile_map_changed" from="HBoxContainer/TabContainer/Playfield" to="HBoxContainer/SideButtons/Json" method="_on_PlayfieldEditor_tile_map_changed"]
[connection signal="tiles_keys_changed" from="HBoxContainer/TabContainer/Playfield" to="HBoxContainer/SideButtons/Json" method="_on_PlayfieldEditor_tiles_keys_changed"]
[connection signal="properties_changed" from="HBoxContainer/TabContainer/Properties" to="HBoxContainer/SideButtons/Json" method="_on_PropertiesEditor_properties_changed"]
[connection signal="text_submitted" from="HBoxContainer/TabContainer/Properties/Pickups/HBoxContainer1/LineEdit" to="HBoxContainer/TabContainer/Properties" method="_on_PickupsLineEdit_text_entered"]
[connection signal="pressed" from="HBoxContainer/TabContainer/Properties/Pickups/Button" to="HBoxContainer/SideButtons/Json" method="_on_PropertiesPickupsButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/OpenFile" to="Ui/Dialogs" method="_on_OpenFile_pressed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/OpenResource" to="Ui/Dialogs" method="_on_OpenResource_pressed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/Save" to="Ui/Dialogs" method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/Test" to="." method="_on_Test_pressed"]
[connection signal="text_changed" from="HBoxContainer/SideButtons/Json" to="HBoxContainer/SideButtons/Json" method="_on_text_changed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/Settings" to="SettingsMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="about_to_popup" from="Ui/Dialogs/OpenFile" to="Ui/Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Ui/Dialogs/OpenFile" to="Ui/Dialogs" method="_on_OpenFile_file_selected"]
[connection signal="popup_hide" from="Ui/Dialogs/OpenFile/PopupHideSignalEmitter" to="Ui/Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_popup" from="Ui/Dialogs/OpenResource" to="Ui/Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Ui/Dialogs/OpenResource" to="Ui/Dialogs" method="_on_OpenResource_file_selected"]
[connection signal="popup_hide" from="Ui/Dialogs/OpenResource/PopupHideSignalEmitter" to="Ui/Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_popup" from="Ui/Dialogs/Save" to="Ui/Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Ui/Dialogs/Save" to="Ui/Dialogs" method="_on_Save_file_selected"]
[connection signal="popup_hide" from="Ui/Dialogs/Save/PopupHideSignalEmitter" to="Ui/Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_popup" from="Ui/Dialogs/Error" to="Ui/Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="popup_hide" from="Ui/Dialogs/Error/PopupHideSignalEmitter" to="Ui/Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="quit_pressed" from="SettingsMenu" to="." method="_on_Quit_pressed"]
